--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>My Bank</title>
   </head>
   <body>
-    <h1>Welcome To My Bank</h1>
+    <header>
+      <h1 class="text-6xl font-bold text-center mt-10">
+        <span class="text-orange-500">Welcome </span
+        ><span class="text-orange-400">To My</span>
+        <span class="text-orange-300">Bank</span>
+        <span class="text-orange-200">!!</span>
+      </h1>
+    </header>
+    <main>
+      <!-- login Section start -->
+      <section>
+        <div class="bg-orange-400"></div>
+      </section>
+      <!-- login Section End -->
+    </main>
   </body>
 </html>
