--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
         <div class="bg-orange-200 w-3/4 p-10 m-auto mt-10 rounded-lg ">
          
             <p class="text-4xl text-orange-500 font-bold mb-5 ">Please First Login</p>
-            <input class="block mb-5 w-3/4 rounded border-2 border-orange-500" type="email" placeholder="Enter Your Email" />
-            <input class="   block w-3/4 rounded border-2 border-orange-500" type="password" placeholder="Enter Your Password" />
-            <button class="mt-5  bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100">Log In</button>
+            <input id="user-email" class="block mb-5 w-3/4 rounded border-2 border-orange-500" type="email" placeholder="Enter Your Email" />
+            <input  id="user-password" class="   block w-3/4 rounded border-2 border-orange-500" type="password" placeholder="Enter Your Password" />
+            <button id="user-login-btn" class="mt-5  bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100">Log In</button>
          
           </div>
         </div>
       </section>
       <!-- login Section End -->
     </main>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
