depositit section compleat

--- a/dashbord.html
+++ b/dashbord.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>DashBord</title>
   </head>
   <body>
-    <h1>My Dashbord</h1>
+    <header>
+      <h1 class="text-6xl font-bold text-center mt-10">
+        <span class="text-orange-500">Lets </span
+        ><span class="text-orange-400">Go </span>
+        <span class="text-orange-300">For</span>
+        <span class="text-orange-200">Depodit</span>
+      </h1>
+    </header>
+    <section>
+      <div
+        class="grid grid-cols-3 font-bold gap-4 text-white w-3/4 mt-10 mx-auto"
+      >
+        <div class="bg-orange-500 p-5">
+          <span class="text-xl">Deposit</span>
+          <br /><span class="text-2xl">$00</span>
+        </div>
+        <div class="bg-orange-400 p-5">
+          <span class="text-xl">Deposit</span>
+          <br />
+          <span class="text-2xl">$00</span>
+        </div>
+        <div class="bg-orange-300 p-5">
+          <span class="text-xl">Deposit</span>
+          <br />
+          <span class="text-2xl">$00</span>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
