--- a/dashbord.html
+++ b/dashbord.html
@@ -10,30 +10,43 @@
   <body>
     <header>
       <h1 class="text-6xl font-bold text-center mt-10">
-        <span class="text-orange-500">Lets </span
-        ><span class="text-orange-400">Go </span>
-        <span class="text-orange-300">For</span>
-        <span class="text-orange-200">Depodit</span>
+        <span class="text-orange-600">Lets </span
+        ><span class="text-orange-500">Go </span>
+        <span class="text-orange-400">For</span>
+        <span class="text-orange-300">Depodit</span>
       </h1>
     </header>
     <section>
       <div
         class="grid grid-cols-3 font-bold gap-4 text-white w-3/4 mt-10 mx-auto"
       >
-        <div class="bg-orange-500 p-5">
+        <div class="bg-orange-700 h-33 p-5 rounded">
           <span class="text-xl">Deposit</span>
           <br /><span class="text-2xl">$00</span>
         </div>
-        <div class="bg-orange-400 p-5">
-          <span class="text-xl">Deposit</span>
+        <div class="bg-orange-600 p-5 h-33 rounded">
+          <span class="text-xl">Withdrawal</span>
           <br />
           <span class="text-2xl">$00</span>
         </div>
-        <div class="bg-orange-300 p-5">
-          <span class="text-xl">Deposit</span>
+        <div class="bg-orange-500 p-5 h-33 rounded">
+          <span class="text-xl">Balance</span>
           <br />
           <span class="text-2xl">$00</span>
         </div>
+      </div>
+      <div class="mx-auto w-3/4 mt-10">
+        <input
+          id="user-password"
+          class="block w-3/4 h-10 rounded border-2 border-orange-500"
+          type="text"
+          placeholder="Enter Your Amount"
+        />
+        <button
+          class="mt-5 bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100"
+        >
+          Deposit
+        </button>
       </div>
     </section>
   </body>
