--- a/dashbord.html
+++ b/dashbord.html
@@ -35,18 +35,33 @@
           <span class="text-2xl">$00</span>
         </div>
       </div>
-      <div class="mx-auto w-3/4 mt-10">
-        <input
-          id="user-password"
-          class="block w-3/4 h-10 rounded border-2 border-orange-500"
-          type="text"
-          placeholder="Enter Your Amount"
-        />
-        <button
-          class="mt-5 bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100"
-        >
-          Deposit
-        </button>
+      <div class="grid grid-cols-2 w-3/4 mx-auto gap-4">
+        <div class="mx-auto w-3/4 mt-10 bg-orange-200 rounded p-10">
+          <input
+            id="user-password"
+            class="block w-3/4 h-10 rounded border-2 border-orange-500"
+            type="text"
+            placeholder="Enter Your Amount"
+          />
+          <button
+            class="mt-5 bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100"
+          >
+            Deposit
+          </button>
+        </div>
+        <div class="mx-auto w-3/4 mt-10 bg-orange-200 rounded p-10">
+          <input
+            id=""
+            class="block w-3/4 h-10 rounded border-2 border-orange-500"
+            type="text"
+            placeholder="Enter Your Amount"
+          />
+          <button
+            class="mt-5 bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100"
+          >
+            Withdrawal
+          </button>
+        </div>
       </div>
     </section>
   </body>
