--- a/dashbord.html
+++ b/dashbord.html
@@ -22,7 +22,9 @@
       >
         <div class="bg-orange-700 h-33 p-5 rounded">
           <span class="text-xl">Deposit</span>
-          <br /><span class="text-2xl">$00</span>
+          <br /><span class="text-2xl"
+            >$ <samp id="deposit-fild">00</samp>
+          </span>
         </div>
         <div class="bg-orange-600 p-5 h-33 rounded">
           <span class="text-xl">Withdrawal</span>
@@ -38,12 +40,13 @@
       <div class="grid grid-cols-2 w-3/4 mx-auto gap-4">
         <div class="mx-auto w-3/4 mt-10 bg-orange-200 rounded p-10">
           <input
-            id="user-password"
+            id="deposit-input"
             class="block w-3/4 h-10 rounded border-2 border-orange-500"
             type="text"
             placeholder="Enter Your Amount"
           />
           <button
+            id="deposit-button"
             class="mt-5 bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100"
           >
             Deposit
@@ -57,6 +60,7 @@
             placeholder="Enter Your Amount"
           />
           <button
+            id="withdrawal-button"
             class="mt-5 bg-orange-500 px-5 py-2 rounded font-bold text-lg text-orange-100"
           >
             Withdrawal
@@ -64,5 +68,6 @@
         </div>
       </div>
     </section>
+    <script src="js/dashbord.js"></script>
   </body>
 </html>
