adding Total Balance section

--- a/dashbord.html
+++ b/dashbord.html
@@ -34,7 +34,7 @@
         <div class="bg-orange-500 p-5 h-33 rounded">
           <span class="text-xl">Balance</span>
           <br />
-          <span class="text-2xl">$00</span>
+          <span class="text-2xl">$ <span id="balance-fild">5000</span> </span>
         </div>
       </div>
       <div class="grid grid-cols-2 w-3/4 mx-auto gap-4">
