--- a/dashbord.html
+++ b/dashbord.html
@@ -29,12 +29,12 @@
         <div class="bg-orange-600 p-5 h-33 rounded">
           <span class="text-xl">Withdrawal</span>
           <br />
-          <span class="text-2xl">$00</span>
+          <span class="text-2xl">$ <span id="withdrawal-fild">00</span> </span>
         </div>
         <div class="bg-orange-500 p-5 h-33 rounded">
           <span class="text-xl">Balance</span>
           <br />
-          <span class="text-2xl">$ <span id="balance-fild">5000</span> </span>
+          <span class="text-2xl">$ <span id="balance-fild">00</span> </span>
         </div>
       </div>
       <div class="grid grid-cols-2 w-3/4 mx-auto gap-4">
@@ -54,7 +54,7 @@
         </div>
         <div class="mx-auto w-3/4 mt-10 bg-orange-200 rounded p-10">
           <input
-            id=""
+            id="withdrawal-input"
             class="block w-3/4 h-10 rounded border-2 border-orange-500"
             type="text"
             placeholder="Enter Your Amount"
